1999-06-15  Tom Yu  <tlyu@mit.edu>

	* asn1_encode.c (asn1_encode_generaltime): Fix minor bug in
	bounds-checking for tm_year: 1900 + 8099 = 9999.

Mon May 10 15:23:51 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Thu Dec  3 19:41:06 1998  Tom Yu  <tlyu@mit.edu>


	* asn1_k_decode.c (asn1_decode_krb5_flags): Fix previous to
	properly left-justify bit strings less than 32 bits.

	* asn1_k_decode.c (asn1_decode_krb5_flags): Modify to deal with
	BIT STRING values that are not exactly 32 bits.  Throw away bits
	beyond number 31 in a bit string for now.  Deal with masking out
	unused bits.

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* asn1buf.c (asn1buf_sync): interoperation testing against heimdal
	revealed a bug.  if extra fields are present in a SEQUENCE, they
	are not ignored and skipped.  This caused the decoder to get out
	of sync.

Thu Jul  2 15:30:25 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* asn1_encode.c: Make the magic Macintosh EPOCH offset be 70 years
 		instead of 66 years, since CodeWarrior Pro 2 now bases
 		everything off of 1900.

Thu Apr 16 17:01:27 1998  Tom Yu  <tlyu@mit.edu>

	* asn1_encode.c (asn1_encode_generaltime): Sanity check the return
	from gmtime() to avoid overruns.

Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
 		directory, since we've moved the configure.in tests in
 		this directory to the toplevel lib/krb5 configure.in

Wed Feb 18 16:18:46 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 22:32:06 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* asn1buf.h (asn1buf_insert_octet): Use static inline function to