@@ -1,3 +1,8 @@
+1999-06-30  Tom Yu  <tlyu@mit.edu>
+
+	* asn1buf.c (asn1buf_sync): Interim fix for DCE compat problem
+	with indefinite length encodings.
+
 1999-06-15  Tom Yu  <tlyu@mit.edu>
 
 	* asn1_encode.c (asn1_encode_generaltime): Fix minor bug in
